--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Change or remove this page</h1>
-        <h1>Travis is working!</h1>
-    </body>
+<html lang="en">
+<head>
+  <title>Movie API</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+  />
+</head>
+<body>
+<main class="main container text-center">
+  <div class="row">
+    <div class="col text-center">
+      <h1>Movie API</h1>
+    </div>
+  </div>
+  <div class="row ">
+    <div class="col-md-6">
+      <h3>All movies</h3>
+      <button class="btn btn-primary" id="allButton">Fetch all movies</button>
+      <table id="allTable" class="table"></table>
+    </div>
+    <div class="col-md-6">
+      <h3>Specific movie</h3>
+      <label for="oneMovieInput">
+        <input placeholder="Movie ID" class="form-control" id="oneMovieInput"/>
+      </label>
+      <button class="btn btn-primary" id="oneMovieButton">Fetch movie by ID</button>
+      <table id="oneMovieTable" class="table"></table>
+    </div>
+  </div>
+</main>
+</body>
+<script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+></script>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"
+></script>
+<script src="index.js"></script>
 </html>
