--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,19 +17,59 @@
       <h1>Movie API</h1>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <h3>Create movie</h3>
+      <h4 style="color: green" id="success"></h4>
+      <form id="creationForm" method="post">
+        <label for="year">
+          <input placeholder="Creation year" class="form-control"
+                 id="year"/>
+        </label>
+        <label for="title">
+          <input placeholder="Title" class="form-control"
+                 id="title"/>
+        </label>
+        <label for="budget">
+          <input placeholder="budget" class="form-control"
+                 id="budget"/>
+        </label>
+
+        <div>
+          <div id="actorSelect"></div>
+          <button class="btn btn-outline-secondary" id="addActorButton"
+                  type="button">Add actor
+          </button>
+        </div>
+
+        <br>
+        <button type="submit" class="btn btn-primary">Create movie</button>
+      </form>
+    </div>
+  </div>
   <div class="row ">
+
     <div class="col-md-6">
       <h3>All movies</h3>
-      <button class="btn btn-primary" id="allButton">Fetch all movies</button>
+      <button class="btn btn-secondary" id="allButton">Fetch all movies</button>
       <table id="allTable" class="table"></table>
     </div>
+
     <div class="col-md-6">
-      <h3>Specific movie</h3>
-      <label for="oneMovieInput">
-        <input placeholder="Movie ID" class="form-control" id="oneMovieInput"/>
-      </label>
-      <button class="btn btn-primary" id="oneMovieButton">Fetch movie by ID</button>
-      <table id="oneMovieTable" class="table"></table>
+
+      <div>
+        <h3>Specific movie</h3>
+        <label for="oneMovieInput">
+          <input placeholder="Movie ID" class="form-control"
+                 id="oneMovieInput"/>
+        </label>
+        <button class="btn btn-secondary" id="oneMovieButton">Fetch movie by
+          ID
+        </button>
+        <table id="oneMovieTable" class="table"></table>
+      </div>
+
+
     </div>
   </div>
 </main>
@@ -45,4 +85,5 @@
     crossorigin="anonymous"
 ></script>
 <script src="index.js"></script>
+<script src="createMovie.js"></script>
 </html>
